# aprilbrush

./: .gitignore  CMakeLists.txt  Changelog.md  README.md  aprilbrush.pro  brushengine.cpp  brushengine.h  canvas.cpp  canvas.h  changelog.txt  js.qrc  license.txt  main.cpp  mainwindow.cpp  mainwindow.h  media.qrc  paintspace.cpp  paintspace.h  qml.qrc  qmlwindow.cpp  qmlwindow.h  qtquickwindow.cpp  qtquickwindow.h  resources.qrc  undocommands.cpp  undocommands.h
app/: CMakeLists.txt  main.cpp
cpp/: blend.cpp  blend.h  brushengine.cpp  brushengine.h  canvas.cpp  canvasitem.cpp  canvasitem.h  colorpicker.cpp  corelib.cpp  corelib.h  imageprocessor.cpp  imageprocessor.h  main.cpp  mainwindow.cpp  openraster.cpp  openraster.h  painteditem.cpp  painteditem.h  paintspace.cpp  paintspace.h  pointereater.cpp  pointereater.h  qmlwindow.cpp  qmlwindow.h  settings.h  tabletEventFilter.cpp  tabletEventFilter.h  tableteventfilter.cpp  tableteventfilter.h
cpp/openraster/: openraster.cpp  openraster.h  orawriteread.cpp  orawriteread.h
cpp/wacom/: wacom_unix.cpp  wacom_unix.h  wacom_win.cpp  wacom_win.h
cpp/widgets/: brushsettings.cpp  inputdevices.h
i18n/: aprilbrush_ru.ts
js/: settings.js  undo.js  utils.js
presets/brushes/: default.abb
qml/: About.qml  BrushEngine.qml  BrushLibrary.qml  BrushSettings.qml  Canvas3DArea.qml  CanvasArea.qml  ColorPicker.qml  Dock.qml  FileDialogBase.qml  FilePanel.qml  LayerManager.qml  Main.qml  PageManager.qml  PagePanel.qml  Slider.qml  UndoManager.qml  brushlib.js  enums.js  glcode.js  main.qml  settings.js  undo.js  utils.js
qml/components/: Button.qml  CheckerBoard.qml  CloseButton.qml  DockItem.qml  Dummy.qml  FileDialog.qml  FileDialogBase.qml  ListItem.qml  ListItemComponent.qml  Panel.qml  Shadow.qml  Slider.qml  SliderText.qml  TableViewBase.qml  ToolWindow.qml  Window.qml  window.qml
qml/components/filedialog/: FileDialogBase.qml  FileDialogOpen.qml  FileDialogSave.qml
qml/dockers/: BrushLibrary.qml  BrushSettings.qml  ColorPicker.qml  LayerManager.qml  UndoManager.qml
qml/main/: About.qml  Actions.qml  MainMenu.qml  MainStatusBar.qml  MainToolBar.qml  WorkArea.qml
qml/style/: MainTabViewStyle.qml
src/: CMakeLists.txt  README.md  aprilbrush.pro  config.h.in  js.qrc  main.cpp  qml.qrc  resources.qrc
src/core/: Application.cpp  Application.h  CommonTypes.h  Constants.h  Context.cpp  Context.h  Core.cpp  Core.h  EventFilter.cpp  EventFilter.h  OpenRaster.cpp  OpenRaster.h  Settings.h  SignalHub.cpp  SignalHub.h  TabletEventFilter.cpp  Utils.cpp  Utils.h
src/cpp/: BrushEngine.cpp  BrushEngine.h  CanvasItem.cpp  CanvasItem.h  Core.cpp  Core.h  Settings.cpp  Settings.h  TabletEventFilter.cpp  TabletEventFilter.h  brushengine.cpp  brushengine.h  canvasitem.cpp  canvasitem.h  core.cpp  core.h  corelib.cpp  corelib.h  curve.cpp  curve.h  imageprocessor.cpp  imageprocessor.h  main.cpp  openraster.cpp  openraster.h  painteditem.cpp  painteditem.h  pointereater.cpp  settings.cpp  settings.h  tableteventfilter.cpp  tableteventfilter.h
src/engine/: BrushEngine.cpp  BrushEngine.h  Layer.cpp  Layer.h
src/engine/undo/: BrushCommand.cpp  BrushCommand.h  ClearCommand.cpp  ClearCommand.h
src/i18n/: app-ru.qm  app-ru.ts  aprilbrush-ru.qm  aprilbrush-ru.ts  aprilbrush_ru.ts
src/js/: brush-lib.js  dialog.js  undo.js  utils.js
src/presets/brushes/: default.abb
src/qml/: About.qml  BrushEngine.qml  BrushLibrary.qml  BrushSettings.qml  Canvas3DArea.qml  CanvasArea.qml  ColorPicker.qml  FileDialog.qml  LayerManager.qml  Main.qml  PageManager.qml  TopBar.qml  UndoManager.qml  brushlib.js  main.qml  settings.js  style.js  undo.js  utils.js
src/qml/components/: ButtonBase.qml  CheckerBoard.qml  CloseButton.qml  ColorBox.qml  Dummy.qml  ListItem.qml  ListItemComponent.qml  MessageDialogBase.qml  Panel.qml  PathLineComponent.qml  SliderText.qml  TableViewBase.qml  ToolWindow.qml  TopButton.qml  VerticalList.qml  WindowDialog.qml
src/qml/components/filedialog/: FileDialogBase.qml  FileDialogExport.qml  FileDialogOpen.qml  FileDialogSave.qml
src/qml/components/messagedialog/: MessageDialogBase.qml  MessageDialogError.qml  MessageDialogInformation.qml  MessageDialogQuestion.qml  MessageDialogWarning.qml
src/qml/components/style/: MainTabViewStyle.qml
src/qml/dockers/: BrushLibrary.qml  BrushSettings.qml  ColorPicker.qml  LayerManager.qml  UndoManager.qml
src/qml/main/: About.qml  Actions.qml  MainMenu.qml  MainToolBar.qml  MenuBarContent.qml  NewImage.qml  Options.qml  StatusBarContent.qml  ToolBarContent.qml  WorkArea.qml
src/qml/style/: ButtonStyle.qml  MainTabViewStyle.qml
src/settings/: FileSettings.cpp  FileSettings.h  Settings.cpp  Settings.h
src/ui/: BrushSettings.cpp  BrushSettings.h  BrushSlider.cpp  BrushSlider.h  Canvas.cpp  Canvas.h  CanvasTabWidget.cpp  CanvasTabWidget.h  ColorPicker.cpp  ColorPicker.h  Dialog.cpp  Dialog.h  InputDevice.cpp  InputDevice.h  MainWindow.cpp  MainWindow.h  NewImage.cpp  NewImage.h  Options.cpp  Options.h  Preferences.cpp  Preferences.h  StandardDialog.cpp
src/ui/dialog/: NewImage.cpp  NewImage.h  Preferences.cpp  Preferences.h  StandardDialog.cpp  StandardDialog.h
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  TestSettings.cpp  TestSettings.h
tests/openraster/: CMakeLists.txt  tst_openraster.cpp
tests/preferences/: CMakeLists.txt  TestPreferences.cpp
tests/settings/: CMakeLists.txt  tst_preferences.cpp
widgets/: brushsettings.cpp  brushsettings.h  colorpicker.cpp  colorpicker.h  inputdevices.cpp  inputdevices.h  layermanager.cpp  layermanager.h  testinputdevice.cpp  testinputdevice.h
